[package]
name = "driver-finder"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
glob = "0.3.0"
anyhow = "1.0.66"
pelite = "0.10.0"
walkdir = "*"
sha2 = "0.10.6"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.87"
serde-hex = "0.1.0"
[dependencies.winapi]
version = "*"
features = ["psapi"]
